GloablServices/keshavglobal/force-app/main/default/objects/Block__c/Block__c.object-meta.xml
<CustomObject>
    <label>Block</label>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Block Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>