GloablServices/keshavglobal/force-app/main/default/objects/Block__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Blocks</relationshipLabel>
    <relationshipName>Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>