GloablServices/keshavglobal/force-app/main/default/objects/Block__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <label>Billing #</label>
    <length>5</length>
    <type>Text</type>
</CustomField>