GloablServices/keshavglobal/force-app/main/default/objects/Block__c/fields/Finance_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Finance_Customer_ID__c</fullName>
    <label>Finance Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>